# bm-shell-engine

./: CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  shell.yaml
src/: config.rs  generator.rs  main.rs
