[package]
name = "pleme-bm-shell-engine"
version = "0.1.0"
edition = "2021"
description = "Shell configuration engine — generates zshrc/zshenv from YAML config"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/bm-shell-engine"
homepage = "https://github.com/pleme-io/bm-shell-engine"
keywords = ["shell", "zsh", "config", "generator", "blackmatter"]
categories = ["command-line-utilities", "config"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.nix", "flake.lock"]

[[bin]]
name = "bm-shell-engine"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
handlebars = "6"
dirs = "6.0"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
